test/runnable/typeof.nt
module typeof;

macro import neat.macros.assert;

void main() {
    int foo() { assert(false); }

    typeof(foo()) bla = 5;
}
