test/fail_compilation/import_private_member.nt
module import_private_member;

import private_member;

void main() { foo(); }
